tests/parsing/smtlib/mcil/errors/260_check-system_bad_attribute_3.mcil
(check-system sys :queries ((q (r))) f)